--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
         <item>Child Health Center</item>
         <item>Nursing Home</item>
         <item>STD Testing</item>
-        <item>Women's Health</item>
+        <item>OB Gyn and Birth Control</item>
     </string-array>
 
     <!-- User Profile -->
@@ -135,14 +135,7 @@
     <string name="health_dept_sexual_jamaica">90-37 Parsons Boulevard, 1st Floor, Jamaica, NY 11432</string>
 
     <!--STD Testing - Phone numbers-->
-    <string name="health_dept_sexual_harlem_phone">2238 5th Avenue, 1st Floor, New York, NY 10037</string>
-    <string name="health_dept_sexual_manhattanville_phone">21 Old Broadway, 2nd Floor, New York, NY 10027</string>
-    <string name="health_dept_sexual_riverside_phone">160 West 100th Street, New York, NY 10025</string>
-    <string name="health_dept_sexual_morrisania_phone">1309 Fulton Avenue, 2nd Floor, Bronx, NY 10456</string>
-    <string name="health_dept_sexual_crown_heights_phone">1218 Prospect Place, 1st Floor, Brooklyn, NY 11213</string>
-    <string name="health_dept_sexual_fort_greene_phone">295 Flatbush Avenue Ext., 2nd Floor, Brooklyn, NY 11201</string>
-    <string name="health_dept_sexual_corona_phone">34-33 Junction Boulevard, Jackson Heights, NY 11372</string>
-    <string name="health_dept_sexual_jamaica_phone">90-37 Parsons Boulevard, 1st Floor, Jamaica, NY 11432</string>
+    <string name="health_dept_sexual_phone">347-396-7959</string>
 
     <!--STD Testing - website-->
     <string name="health_dept_sexual_website">https://www1.nyc.gov/site/doh/services/sexual-health-clinics.page</string>
